Add all work places

--- a/index.html
+++ b/index.html
@@ -154,17 +154,76 @@
 	</tr>
 	<tr>
 		<td class="aligned">
-			<b>Senior C++ Developer</b><br />
-			11/2013 - 03/2019<br />
+			<b>C++/Qt Senior Developer</b><br />
+			11/2018 - 03/2019<br />
 		</td>
 		<td>
-			Moscow: <i>Luxoft, Escape Technologies</i><br />
-			Novosibirsk: <i>SoftLab-NSK, Movavi, 2Gis</i> <br />
+			Moscow, Russia: <i>Escape Technology<br /></i>
+			<ul>
+				<li>Telegram like avatars behavior</li>
+			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td class="aligned">
+			<b>Self-employed C++/Qt developer</b><br />
+			06/2018 - 11/2018
+		</td>
+		<td>
+			<i>The home office, Moscow<br /></i>
+			<ul>
+				<li>Design and publication of own application
+				<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a></li>
+			</li>
+		</td>
+	</tr>
+	<tr>
+		<td class="aligned">
+			<b>C++ Software Developer</b><br />
+			01/2018 - 06/2018<br />
+		</td>
+		<td>
+			Moscow, Russia: <i>Luxoft<br /></i>
+			<ul>
+				<li>Lua debugger for scripts</li>
+			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td class="aligned">
+			<b>C++/Qt Software Developer</b><br />
+			10/2017 - 12/2017<br />
+		</td>
+		<td>
+			Novosibirsk, Russia: <i>2Gis<br /></i>
+			<ul>
+				<li>Designed and implemented the fastest server searching algorithm</li>
+			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td class="aligned">
+			<b>Middle C++/Qt Developer</b><br />
+			03/2016 - 10/2017<br />
+		</td>
+		<td>
+			Novosibirsk, Russia: <i>Movavi<br /></i>
+			<ul>
+				<li>Implemented a "Slideshow Master" that became a successful
+					<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>product</a></li>
+			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td class="aligned">
+			<b>C++ Programmer</b><br />
+			11/2013 - 03/2016<br />
+		</td>
+		<td>
+			Novosibirsk, Russia: <i>SoftLab-NSK<br /></i>
 			<ul>
 				<li>Designed a no bullets chindren's
 					<a href=https://drive.google.com/open?id=1obonHSKtsqmg0XIQM0_egqadyE30Fnq2>biathlon training system</a></li>
-				<li>Implemented a "Slideshow Master" that became a successful
-					<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>separate product</a></li>
 			</ul>
 		</td>
 	</tr>
@@ -176,27 +235,13 @@
 <table>
 	<tr>
 		<td class="aligned">
-			<b>Teacher at the university</b><br />
+			<b>C++ OOP Teacher</b><br />
 			01/2016 - 06/2016
 		</td>
 		<td>
 			<i>Novosibirsk State University, Novosibirsk<br /></i>
 			<ul>
 				<li>Taught object oriented programming course for a second year group of fifteen students at the University </li>
-			</li>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>Self-employed developer</b><br />
-			06/2018 - 11/2018
-		</td>
-		<td>
-			<i>Work from home, Moscow<br /></i>
-			<ul>
-				<li>Design and publication of own application
-				<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a></li>
-				<li>Opened the mind by looking into Android operating system</li>
 			</li>
 		</td>
 	</tr>
