Update photo and some information

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Maxim Sheshukov | Senior C++ developer</title>
+	<title>Maxim Sheshukov</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="./images/title_icon.png" />
 	<link rel="stylesheet" href="styles/styles.css">
@@ -55,12 +55,6 @@
 		img.point {
 			width: 10px;
 		}
-		#photo_holder {
-			border-radius: 4px;
-			border: 1px solid #4242;
-			padding: 4px;
-			padding-bottom: 0px;
-		}
 		txt {
 			padding-left: 8px;
 			padding-right: 8px;
@@ -98,20 +92,20 @@
 <table>
 	<tr>
 		<td>
-			<div id="photo_holder">
-				<img src="./images/photo_grey.png" width="150px">
-			</div>
+			<img src="./images/photo.png" width="125px">
 		</td>
 		<td width="100%" style="padding-left: 16px;">
 			<h1>Maxim Sheshukov</h1>
-			<hr>
-			15/11/1988 &#x25cf; Russian &#x25cf; Berlin, Germany &#x25cf; sheshukov.maxim@gmail.com<br />
-			&#x25cf; github/skype: go-maxus-go
-			<hr>
-			<p align="justify" style="text-indent: 0px;">
-			Results-focused software engineer with 5+ years of experience of design and implementation of cross-platform applications.
-			Well-versed in producing efficient, easy-readable, scalable, reusable and test covered code.
-			Initiative and creative, constantly looking for ways to improve the development process.
+			<br />
+			&#x25cf; 15.11.1988, Russian<br />
+			&#x25cf; <i>residence:</i> Berlin, Germany<br />
+			&#x25cf; <i>e-mail:</i> sheshukov.maxim@gmail.com<br />
+			&#x25cf; <i>github:</i> go-maxus-go<br />
+			<br />
+			<p align="justify">
+			A results-oriented software engineer with more than 7 years of work experience.
+			Well-versed in producing efficient, reusable and readable code.
+			Initiative and creative, constantly looking for ways for improvement.
 			</p>
 		</td>
 	</tr>
@@ -123,13 +117,13 @@
 <table>
 	<tr>
 		<td class="aligned">
-			<b>Physics, master degree</b><br />
+			<b>Computer science / Physics master's degree</b><br />
 			09/2006 - 06/2012
 		</td>
 		<td>
 			<i><a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a>, Russia</i>
 			<ul>
-				<li>Department of automation of physical and technical researches</li>
+				<li>Section of automation of physical and technical researches. Departmant of physics.</li>
 			</li>
 		</td>
 	</tr>
@@ -225,24 +219,6 @@
 				<li>Designed a no bullets chindren's
 					<a href=https://drive.google.com/open?id=1obonHSKtsqmg0XIQM0_egqadyE30Fnq2>biathlon training system</a></li>
 			</ul>
-		</td>
-	</tr>
-</table>
-
-<h2>Additional experience</h2>
-<hr>
-
-<table>
-	<tr>
-		<td class="aligned">
-			<b>C++ OOP Teacher</b><br />
-			01/2016 - 06/2016
-		</td>
-		<td>
-			<i>Novosibirsk State University, Novosibirsk<br /></i>
-			<ul>
-				<li>Taught object oriented programming course for a second year group of fifteen students at the University </li>
-			</li>
 		</td>
 	</tr>
 </table>
@@ -346,7 +322,7 @@
 				<tr><td><b>Languages</b></td></tr>
 				<tr><td>Russian</td><td align="right">Native</td></tr>
 				<tr><td>English</td><td align="right">Advanced</td></tr>
-				<tr><td>German</td><td align="right">Pre-Intermediate</td></tr>
+				<tr><td>German</td><td align="right">Intermediate</td></tr>
 			</table>
 		</td>
 	</tr>
