--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			06/2019 - nowadays<br />
 		</td>
 		<td>
-			Berlin: <i>BinarySpaces<br /></i>
+			<a href="https://www.binaryspaces.com/">BinarySpaces</a>, <i>Berlin, Germany<br /></i>
 			<ul>
 				<li>Reduced project save time by 50% by implementing data cache in RAM.</li>
 				<li>Implemented a release MVP feature "Rotary Table" for machine setup.</li>
@@ -148,11 +148,11 @@
 	</tr>
 	<tr>
 		<td class="aligned">
-			<b>C++/Qt Senior Developer</b><br />
+			<b>Lead Software Engineer C++/Qt</b><br />
 			11/2018 - 03/2019<br />
 		</td>
 		<td>
-			Moscow, Russia: <i>Escape Technology<br /></i>
+			<a href="https://escape-team.tech/">Escape Technology</a>, <i>Moscow, Russia<br /></i>
 			<ul>
 				<li>Telegram like avatars behavior</li>
 			</ul>
@@ -160,65 +160,67 @@
 	</tr>
 	<tr>
 		<td class="aligned">
-			<b>Self-employed C++/Qt developer</b><br />
-			06/2018 - 11/2018
-		</td>
-		<td>
-			<i>The home office, Moscow<br /></i>
-			<ul>
-				<li>Design and publication of own application
-				<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a></li>
-			</li>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>C++ Software Developer</b><br />
+			<b>Software Engineer C++</b><br />
 			01/2018 - 06/2018<br />
 		</td>
 		<td>
-			Moscow, Russia: <i>Luxoft<br /></i>
+			<a href="https://www.luxoft.com/">Luxoft</a>, <i>Moscow, Russia<br /></i>
 			<ul>
-				<li>Lua debugger for scripts</li>
+				<li>Added a debugger for Lua scripts</li>
 			</ul>
 		</td>
 	</tr>
 	<tr>
 		<td class="aligned">
-			<b>C++/Qt Software Developer</b><br />
+			<b>Software Engineer C++/Qt</b><br />
 			10/2017 - 12/2017<br />
 		</td>
 		<td>
-			Novosibirsk, Russia: <i>2Gis<br /></i>
+			<a href="https://en.wikipedia.org/wiki/2GIS">2GIS</a>, <i>Novosibirsk, Russia<br /></i>
 			<ul>
-				<li>Designed and implemented the fastest server searching algorithm</li>
+				<li>Implemented the algorithm for choosing the fastest server</li>
 			</ul>
 		</td>
 	</tr>
 	<tr>
 		<td class="aligned">
-			<b>Middle C++/Qt Developer</b><br />
+			<b>Software Engineer C++/Qt</b><br />
 			03/2016 - 10/2017<br />
 		</td>
 		<td>
-			Novosibirsk, Russia: <i>Movavi<br /></i>
+			<a href="https://www.movavi.com/">Movavi</a>, <i>Novosibirsk, Russia<br /></i>
 			<ul>
-				<li>Implemented a "Slideshow Master" that became a successful
-					<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>product</a></li>
+				<li>Implemented a
+				<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>"Slideshow Master"</a>
+				that became a successful product</li>
 			</ul>
 		</td>
 	</tr>
 	<tr>
 		<td class="aligned">
-			<b>C++ Programmer</b><br />
+			<b> Software Engineer C++</b><br />
 			11/2013 - 03/2016<br />
 		</td>
 		<td>
-			Novosibirsk, Russia: <i>SoftLab-NSK<br /></i>
+			<a href="http://www.softlab-nsk.com/">SoftLab-NSK</a>, <i>Novosibirsk, Russia<br /></i>
 			<ul>
-				<li>Designed a no bullets chindren's
-					<a href=https://drive.google.com/open?id=1obonHSKtsqmg0XIQM0_egqadyE30Fnq2>biathlon training system</a></li>
+				<li>Designed a no bullets 
+				<a href=https://drive.google.com/open?id=1obonHSKtsqmg0XIQM0_egqadyE30Fnq2>biathlon training system</a>
+				for chindren</li>
 			</ul>
+		</td>
+	</tr>
+</table>
+<hr>
+<table>
+	<tr>
+		<td class="aligned">
+			<b>My projects</b><br />
+		</td>
+		<td>
+			<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> (Flutter),
+			<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.marblespuzzle">Marble Puzzle</a> (Qt, QML),
+			<a href="https://github.com/go-maxus-go/di">di</a> (C++)
 		</td>
 	</tr>
 </table>
@@ -261,7 +263,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Boost</td>
+					<td>Flutter</td>
 					<td align="right" style="padding-right: 50px;">
 						<img class="point" src="images/filled_circle.png">
 						<img class="point" src="images/filled_circle.png">
