--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		a, p, b, i, td, li, txt {
 			font-family: 'Droid Sans';
 			font-size: 14px;
+			line-height: 1.3;
 		}
 		ul {
 			margin-left: 25px;
@@ -45,7 +46,7 @@
 			padding: 0px;
 		}
 		td.aligned {
-			width: 200px;
+			width: 220px;
 		}
 		table {
 			margin-left: 0px;
@@ -54,6 +55,12 @@
 		}
 		img.point {
 			width: 10px;
+		}
+		img.icon {
+			width: 16px;
+			position: relative;
+			top: 2px;
+			margin-right: 16px;
 		}
 		txt {
 			padding-left: 8px;
@@ -97,10 +104,10 @@
 		<td width="100%" style="padding-left: 16px;">
 			<h1>Maxim Sheshukov</h1>
 			<br />
-			&#x25cf; 15.11.1988, Russian<br />
-			&#x25cf; <i>residence:</i> Berlin, Germany<br />
-			&#x25cf; <i>e-mail:</i> sheshukov.maxim@gmail.com<br />
-			&#x25cf; <i>github:</i> go-maxus-go<br />
+			<img class="icon" src="images/pin.png">Berlin, Germany<br />
+			<img class="icon" src="images/phone.png">+491556004078<br />
+			<img class="icon" src="images/email.png">sheshukov.maxim@gmail.com<br />
+			<img class="icon" src="images/github.png">go-maxus-go<br />
 			<br />
 			<p align="justify">
 			A results-oriented software engineer with more than 7 years of work experience.
@@ -121,7 +128,7 @@
 			09/2006 - 06/2012
 		</td>
 		<td>
-			<i><a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a>, Russia</i>
+			<a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a>, <i>Novosibirsk, Russia</i>
 			<ul>
 				<li>Section of automation of physical and technical researches. Departmant of physics.</li>
 			</li>
