--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
 			width: 10px;
 		}
 		img.icon {
-			width: 16px;
+			width: 24px;
 			position: relative;
-			top: 2px;
-			margin-right: 16px;
+			top: 6px;
+			margin-right: 8px;
+		}
+		img.hobby {
+			width: 40px;
 		}
 		txt {
 			padding-left: 8px;
@@ -99,42 +102,25 @@
 <table>
 	<tr>
 		<td>
-			<img src="./images/photo.png" width="125px">
+			<img src="./images/photo.png" width="120px">
 		</td>
-		<td width="100%" style="padding-left: 16px;">
+		<td width="100%" style="padding-left: 32px;">
 			<h1>Maxim Sheshukov</h1>
 			<br />
 			<img class="icon" src="images/pin.png">Berlin, Germany<br />
-			<img class="icon" src="images/phone.png">+491556004078<br />
-			<img class="icon" src="images/email.png">sheshukov.maxim@gmail.com<br />
-			<img class="icon" src="images/github.png">go-maxus-go<br />
+			<img class="icon" src="images/phone.png"><a href="tel:+4915256004078">+4915256004078<br />
+			<img class="icon" src="images/email.png"><a href="mailto:sheshukovmaxim@gmail.com">sheshukovmaxim@gmail.com</a><br />
+			<img class="icon" src="images/github.png"><a href="https://github.com/go-maxus-go">go-maxus-go</a><br />
 			<br />
-			<p align="justify">
-			A results-oriented software engineer with more than 7 years of work experience.
-			Well-versed in producing efficient, reusable and readable code.
-			Initiative and creative, constantly looking for ways for improvement.
-			</p>
 		</td>
 	</tr>
 <table>
 
-<h2>Education</h2>
-<hr>
-
-<table>
-	<tr>
-		<td class="aligned">
-			<b>Computer science / Physics master's degree</b><br />
-			09/2006 - 06/2012
-		</td>
-		<td>
-			<a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a>, <i>Novosibirsk, Russia</i>
-			<ul>
-				<li>Section of automation of physical and technical researches. Departmant of physics.</li>
-			</li>
-		</td>
-	</tr>
-</table>
+<p align="justify">
+A results-oriented software engineer with more than 7 years of work experience.
+Well-versed in producing efficient, reusable and readable code.
+Initiative and creative, constantly looking for ways for improvement.
+</p>
 
 <h2>Work experience</h2>
 <hr>
@@ -148,8 +134,8 @@
 		<td>
 			<a href="https://www.binaryspaces.com/">BinarySpaces</a>, <i>Berlin, Germany<br /></i>
 			<ul>
-				<li>Reduced project save time by 50% by implementing data cache in RAM.</li>
-				<li>Implemented a release MVP feature "Rotary Table" for machine setup.</li>
+				<li>Reduced project save time by 50% by implementing data cache in RAM</li>
+				<li>Implemented a release MVP feature "Rotary Table" for machine setup</li>
 			</ul>
 		</td>
 	</tr>
@@ -213,7 +199,7 @@
 			<ul>
 				<li>Designed a no bullets 
 				<a href=https://drive.google.com/open?id=1obonHSKtsqmg0XIQM0_egqadyE30Fnq2>biathlon training system</a>
-				for chindren</li>
+				for children</li>
 			</ul>
 		</td>
 	</tr>
@@ -226,8 +212,26 @@
 		</td>
 		<td>
 			<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> (Flutter),
-			<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.marblespuzzle">Marble Puzzle</a> (Qt, QML),
+			<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.marblespuzzle">Marbles Puzzle</a> (Qt, QML),
 			<a href="https://github.com/go-maxus-go/di">di</a> (C++)
+		</td>
+	</tr>
+</table>
+
+<h2>Education</h2>
+<hr>
+
+<table>
+	<tr>
+		<td class="aligned">
+			<b>Computer science / Physics master's degree</b><br />
+			09/2006 - 06/2012
+		</td>
+		<td>
+			<a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a>, <i>Novosibirsk, Russia</i>
+			<ul>
+				<li>Section of automation of physical and technical research. Department of physics.</li>
+			</li>
 		</td>
 	</tr>
 </table>
@@ -240,7 +244,7 @@
 			<table width="100%">
 				<tr><td><b>Coding</b></td></tr>
 				<tr>
-					<td><a href="https://drive.google.com/drive/folders/15Oub2s6kyQ46cU-gVCYjzJBZNLYL0y9J">C++</a></td>
+					<td><a href="https://drive.google.com/drive/folders/15Oub2s6kyQ46cU-gVCYjzJBZNLYL0y9J">C++</a>, STL, Qt, QML</td>
 					<td align="right" style="padding-right: 50px;">
 						<img class="point" src="images/filled_circle.png">
 						<img class="point" src="images/filled_circle.png">
@@ -250,17 +254,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>STL</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-					</td>
-				</tr>
-				<tr>
-					<td>Qt</td>
+					<td>Dart, Flutter</td>
 					<td align="right" style="padding-right: 50px;">
 						<img class="point" src="images/filled_circle.png">
 						<img class="point" src="images/filled_circle.png">
@@ -270,7 +264,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Flutter</td>
+					<td>Boost</td>
 					<td align="right" style="padding-right: 50px;">
 						<img class="point" src="images/filled_circle.png">
 						<img class="point" src="images/filled_circle.png">
@@ -285,7 +279,7 @@
 			<table width="100%">
 				<tr><td><b>Development</b></td></tr>
 				<tr>
-					<td><a href="https://drive.google.com/drive/folders/180_r3mn6kDGEWIykSrBRIUl5itSl7ESX">Git</a></td>
+					<td><a href="https://drive.google.com/drive/folders/180_r3mn6kDGEWIykSrBRIUl5itSl7ESX">Git</a>, CI, CD</td>
 					<td align="right" style="padding-right: 50px;">
 						<img class="point" src="images/filled_circle.png">
 						<img class="point" src="images/filled_circle.png">
@@ -295,7 +289,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>OOP</td>
+					<td>OOP, SOLID, TDD</td>
 					<td align="right" style="padding-right: 50px;">
 						<img class="point" src="images/filled_circle.png">
 						<img class="point" src="images/filled_circle.png">
@@ -305,17 +299,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Algorithms</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/hollow_circle.png">
-					</td>
-				</tr>
-				<tr>
-					<td>TDD</td>
+					<td>Algorithms, patterns</td>
 					<td align="right" style="padding-right: 50px;">
 						<img class="point" src="images/filled_circle.png">
 						<img class="point" src="images/filled_circle.png">
@@ -331,7 +315,7 @@
 				<tr><td><b>Languages</b></td></tr>
 				<tr><td>Russian</td><td align="right">Native</td></tr>
 				<tr><td>English</td><td align="right">Advanced</td></tr>
-				<tr><td>German</td><td align="right">Intermediate</td></tr>
+				<tr><td>German</td><td align="right">B1-B2</td></tr>
 			</table>
 		</td>
 	</tr>
@@ -345,7 +329,7 @@
 			<table width="100%">
 				<tr>
 					<td align="center">
-						<img src="images/programming.png" width="48px">
+						<img class="hobby" src="images/programming.png">
 					</td>
 				</tr>
 				<tr>
@@ -359,26 +343,12 @@
 			<table width="100%">
 				<tr>
 					<td align="center">
-						<img src="images/app_development.png" width="48px">
+						<img class="hobby" src="images/ai.png">
 					</td>
 				</tr>
 				<tr>
 					<td align="center">
-						App Development
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td width="20%">
-			<table width="100%">
-				<tr>
-					<td align="center">
-						<img src="images/computer_games.png" width="48px">
-					</td>
-				</tr>
-				<tr>
-					<td align="center">
-						Computer Games
+						Artificial Intelligence
 					</td>
 				</tr>
 			</table>
@@ -387,7 +357,7 @@
 			<table width="100%">
 				<tr>
 					<td align="center">
-						<img src="images/traveling.png" width="48px">
+						<img class="hobby" src="images/traveling.png">
 					</td>
 				</tr>
 				<tr>
@@ -401,12 +371,26 @@
 			<table width="100%">
 				<tr>
 					<td align="center">
-						<img src="images/reading.png" width="48px">
+						<img class="hobby" src="images/reading.png">
 					</td>
 				</tr>
 				<tr>
 					<td align="center">
 						Reading
+					</td>
+				</tr>
+			</table>
+		</td>
+		<td width="20%">
+			<table width="100%">
+				<tr>
+					<td align="center">
+						<img class="hobby" src="images/computer_games.png">
+					</td>
+				</tr>
+				<tr>
+					<td align="center">
+						Computer Games
 					</td>
 				</tr>
 			</table>
@@ -418,11 +402,11 @@
 <hr style="margin-bottom: 16px;">
 <txt id="rounded_rect">Quick learning</txt>
 <txt id="rounded_rect">Critical thinking</txt>
-<txt id="rounded_rect">Motivation</txt>
-<txt id="rounded_rect">Reliable</txt>
-<txt id="rounded_rect">Initiative</txt>
-<txt id="rounded_rect">Team player</txt>
+<txt id="rounded_rect">Teamwork</txt>
+<txt id="rounded_rect">Reliability</txt>
 <txt id="rounded_rect">Leadership</txt>
+<txt id="rounded_rect">Initiative</txt>
+<txt id="rounded_rect">Motivation</txt>
 
 </section>
 </body>
