--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <section class="sheet padding-10mm">
 
 <div class="no-print" id="content">
-	<a href="https://github.com/go-maxus-go/cv/raw/master/pdf/Maxim%20Sheshukov%20_%20Senior%20C%2B%2B%20developer.pdf">
+	<a href="https://github.com/go-maxus-go/cv/raw/master/pdf/Maxim_Sheshukov_cv.pdf">
 		<img src="images/download_icon.png" width="24px" height="24px"/>
 	</a>
 </div>
