--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		a, p, b, i, td, li, txt {
 			font-family: 'Droid Sans';
 			font-size: 14px;
-			line-height: 1.3;
+			line-height: 1.2;
 		}
 		ul {
 			margin-left: 25px;
@@ -95,7 +95,7 @@
 
 <div class="no-print" id="content">
 	<a href="https://github.com/go-maxus-go/cv/raw/master/pdf/Maxim_Sheshukov_cv.pdf">
-		<img src="images/download_icon.png" width="24px" height="24px"/>
+		<img src="images/download_icon.png" width="48px"/>
 	</a>
 </div>
 
@@ -147,7 +147,7 @@ Initiative and creative, constantly looking for ways for improvement.
 		<td>
 			<a href="https://escape-team.tech/">Escape Technology</a>, <i>Moscow, Russia<br /></i>
 			<ul>
-				<li>Telegram like avatars behavior</li>
+				<li>Moving avatars like in Telegram</li>
 			</ul>
 		</td>
 	</tr>
@@ -184,7 +184,7 @@ Initiative and creative, constantly looking for ways for improvement.
 			<a href="https://www.movavi.com/">Movavi</a>, <i>Novosibirsk, Russia<br /></i>
 			<ul>
 				<li>Implemented a
-				<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>"Slideshow Master"</a>
+				<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>Slideshow Master</a>
 				that became a successful product</li>
 			</ul>
 		</td>
@@ -406,7 +406,6 @@ Initiative and creative, constantly looking for ways for improvement.
 <txt id="rounded_rect">Reliability</txt>
 <txt id="rounded_rect">Leadership</txt>
 <txt id="rounded_rect">Initiative</txt>
-<txt id="rounded_rect">Motivation</txt>
 
 </section>
 </body>
