Mirgate to google docs

--- a/index.html
+++ b/index.html
@@ -1,412 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Maxim Sheshukov</title>
-
-	<link rel="shortcut icon" type="image/x-icon" href="./images/title_icon.png" />
-	<link rel="stylesheet" href="styles/styles.css">
-	<link href='https://fonts.googleapis.com/css?family=Droid Sans' rel='stylesheet'>
+  <head>
+    <title>Maxim Sheshukov</title>
 	<style>
-		hr {
-			height: 0px;
-			border: 1px solid #424242;
-			border-radius: 5px;
-			background-color: #424242;
-			padding: 0;
-		}
-		h1 {
-			font-family: 'Droid Sans';
-			font-size: 36px;
-			font-weight: lighter;
-			margin-top: -10px;
-			margin-bottom: 0px;
-			text-align: left;
-		}
-		h2 {
-			font-family: 'Droid Sans';
-			font-size: 22px;
-			font-weight: 10;
-			margin-bottom: -2px;
-			text-align: left;
-		}
-		a, p, b, i, td, li, txt {
-			font-family: 'Droid Sans';
-			font-size: 14px;
-			line-height: 1.2;
-		}
-		ul {
-			margin-left: 25px;
-			margin-top: 0px;
-			margin-bottom: 4px;
-			padding: 0px;
-		}
-		td, tr {
-			margin-left: 0px;
-			margin-right: 0px;
-			padding: 0px;
-		}
-		td.aligned {
-			width: 220px;
-		}
-		table {
-			margin-left: 0px;
-			margin-right: 0px;
-			padding: 0px;
-		}
-		img.point {
-			width: 10px;
-		}
-		img.icon {
-			width: 24px;
-			position: relative;
-			top: 6px;
-			margin-right: 8px;
-		}
-		img.hobby {
-			width: 40px;
-		}
-		txt {
-			padding-left: 8px;
-			padding-right: 8px;
-			font-weight: bold;
-		}
-		#rounded_rect {
-			border-radius: 8px;
-			background-color: #424242 !important;
-			-webkit-print-color-adjust: exact;
-			padding-top: 6px;
-			padding-bottom: 6px;
-			color: #ffffff;
-			text-align: center;
-			margin-right: 8px;
-		}
-		#content {
-			position: relative;
-		}
-		#content img {
-			position: absolute;
-			top: -32px;
-			right: -32px;
-		}
-	</style>
-</head>
-<body class="A4">
-<section class="sheet padding-10mm">
-
-<div class="no-print" id="content">
-	<a href="https://github.com/go-maxus-go/cv/raw/master/pdf/Maxim_Sheshukov_cv.pdf">
-		<img src="images/download_icon.png" width="48px"/>
-	</a>
-</div>
-
-<table>
-	<tr>
-		<td>
-			<img src="./images/photo.png" width="120px">
-		</td>
-		<td width="100%" style="padding-left: 32px;">
-			<h1>Maxim Sheshukov</h1>
-			<br />
-			<img class="icon" src="images/pin.png">Berlin, Germany<br />
-			<img class="icon" src="images/phone.png"><a href="tel:+4915256004078">+4915256004078<br />
-			<img class="icon" src="images/email.png"><a href="mailto:sheshukovmaxim@gmail.com">sheshukovmaxim@gmail.com</a><br />
-			<img class="icon" src="images/github.png"><a href="https://github.com/go-maxus-go">go-maxus-go</a><br />
-			<br />
-		</td>
-	</tr>
-<table>
-
-<p align="justify">
-A results-oriented software engineer with more than 7 years of work experience.
-Well-versed in producing efficient, reusable and readable code.
-Initiative and creative, constantly looking for ways for improvement.
-</p>
-
-<h2>Work experience</h2>
-<hr>
-
-<table>
-	<tr>
-		<td class="aligned">
-			<b>Software Engineer C++</b><br />
-			06/2019 - nowadays<br />
-		</td>
-		<td>
-			<a href="https://www.binaryspaces.com/">BinarySpaces</a>, <i>Berlin, Germany<br /></i>
-			<ul>
-				<li>Reduced project save time by 50% by implementing data cache in RAM</li>
-				<li>Implemented a release MVP feature "Rotary Table" for machine setup</li>
-			</ul>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>Lead Software Engineer C++/Qt</b><br />
-			11/2018 - 03/2019<br />
-		</td>
-		<td>
-			<a href="https://escape-team.tech/">Escape Technology</a>, <i>Moscow, Russia<br /></i>
-			<ul>
-				<li>Moving avatars like in Telegram</li>
-			</ul>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>Software Engineer C++</b><br />
-			01/2018 - 06/2018<br />
-		</td>
-		<td>
-			<a href="https://www.luxoft.com/">Luxoft</a>, <i>Moscow, Russia<br /></i>
-			<ul>
-				<li>Added a debugger for Lua scripts</li>
-			</ul>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>Software Engineer C++/Qt</b><br />
-			10/2017 - 12/2017<br />
-		</td>
-		<td>
-			<a href="https://en.wikipedia.org/wiki/2GIS">2GIS</a>, <i>Novosibirsk, Russia<br /></i>
-			<ul>
-				<li>Implemented the algorithm for choosing the fastest server</li>
-			</ul>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b>Software Engineer C++/Qt</b><br />
-			03/2016 - 10/2017<br />
-		</td>
-		<td>
-			<a href="https://www.movavi.com/">Movavi</a>, <i>Novosibirsk, Russia<br /></i>
-			<ul>
-				<li>Implemented a
-				<a href=https://www.movavi.com/photo-to-dvd-slideshow/?asrc=main_menu>Slideshow Master</a>
-				that became a successful product</li>
-			</ul>
-		</td>
-	</tr>
-	<tr>
-		<td class="aligned">
-			<b> Software Engineer C++</b><br />
-			11/2013 - 03/2016<br />
-		</td>
-		<td>
-			<a href="http://www.softlab-nsk.com/">SoftLab-NSK</a>, <i>Novosibirsk, Russia<br /></i>
-			<ul>
-				<li>Designed a no bullets 
-				<a href=https://drive.google.com/open?id=1obonHSKtsqmg0XIQM0_egqadyE30Fnq2>biathlon training system</a>
-				for children</li>
-			</ul>
-		</td>
-	</tr>
-</table>
-<hr>
-<table>
-	<tr>
-		<td class="aligned">
-			<b>My projects</b><br />
-		</td>
-		<td>
-			<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.foody">Foody</a> (Flutter),
-			<a href="https://play.google.com/store/apps/details?id=ru.bananabits.android.marblespuzzle">Marbles Puzzle</a> (Qt, QML),
-			<a href="https://github.com/go-maxus-go/di">di</a> (C++)
-		</td>
-	</tr>
-</table>
-
-<h2>Education</h2>
-<hr>
-
-<table>
-	<tr>
-		<td class="aligned">
-			<b>Computer science / Physics master's degree</b><br />
-			09/2006 - 06/2012
-		</td>
-		<td>
-			<a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a>, <i>Novosibirsk, Russia</i>
-			<ul>
-				<li>Section of automation of physical and technical research. Department of physics.</li>
-			</li>
-		</td>
-	</tr>
-</table>
-
-<h2>Skills</h2>
-<hr>
-<table width="100%">
-	<tr>
-		<td width="33%">
-			<table width="100%">
-				<tr><td><b>Coding</b></td></tr>
-				<tr>
-					<td><a href="https://drive.google.com/drive/folders/15Oub2s6kyQ46cU-gVCYjzJBZNLYL0y9J">C++</a>, STL, Qt, QML</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-					</td>
-				</tr>
-				<tr>
-					<td>Dart, Flutter</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/hollow_circle.png">
-					</td>
-				</tr>
-				<tr>
-					<td>Boost</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/hollow_circle.png">
-						<img class="point" src="images/hollow_circle.png">
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td width="33%">
-			<table width="100%">
-				<tr><td><b>Development</b></td></tr>
-				<tr>
-					<td><a href="https://drive.google.com/drive/folders/180_r3mn6kDGEWIykSrBRIUl5itSl7ESX">Git</a>, CI, CD</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-					</td>
-				</tr>
-				<tr>
-					<td>OOP, SOLID, TDD</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-					</td>
-				</tr>
-				<tr>
-					<td>Algorithms, patterns</td>
-					<td align="right" style="padding-right: 50px;">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/filled_circle.png">
-						<img class="point" src="images/hollow_circle.png">
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td width="25%">
-			<table width="100%">
-				<tr><td><b>Languages</b></td></tr>
-				<tr><td>Russian</td><td align="right">Native</td></tr>
-				<tr><td>English</td><td align="right">Advanced</td></tr>
-				<tr><td>German</td><td align="right">B1-B2</td></tr>
-			</table>
-		</td>
-	</tr>
-</table>
-
-<h2>Hobbies</h2>
-<hr>
-<table width="100%">
-	<tr>
-		<td width="20%">
-			<table width="100%">
-				<tr>
-					<td align="center">
-						<img class="hobby" src="images/programming.png">
-					</td>
-				</tr>
-				<tr>
-					<td align="center">
-						Programming
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td width="20%">
-			<table width="100%">
-				<tr>
-					<td align="center">
-						<img class="hobby" src="images/ai.png">
-					</td>
-				</tr>
-				<tr>
-					<td align="center">
-						Artificial Intelligence
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td width="20%">
-			<table width="100%">
-				<tr>
-					<td align="center">
-						<img class="hobby" src="images/traveling.png">
-					</td>
-				</tr>
-				<tr>
-					<td align="center">
-						Traveling
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td width="20%">
-			<table width="100%">
-				<tr>
-					<td align="center">
-						<img class="hobby" src="images/reading.png">
-					</td>
-				</tr>
-				<tr>
-					<td align="center">
-						Reading
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td width="20%">
-			<table width="100%">
-				<tr>
-					<td align="center">
-						<img class="hobby" src="images/computer_games.png">
-					</td>
-				</tr>
-				<tr>
-					<td align="center">
-						Computer Games
-					</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-</table>
-
-<h2>Strengths</h2>
-<hr style="margin-bottom: 16px;">
-<txt id="rounded_rect">Quick learning</txt>
-<txt id="rounded_rect">Critical thinking</txt>
-<txt id="rounded_rect">Teamwork</txt>
-<txt id="rounded_rect">Reliability</txt>
-<txt id="rounded_rect">Leadership</txt>
-<txt id="rounded_rect">Initiative</txt>
-
-</section>
-</body>
+      body {
+        margin: 0;
+      }
+      iframe {
+        position:fixed;
+        top:0;
+        left:0;
+        bottom:0;
+        right:0;
+        width:100%;
+        height:100%;
+        border:none;
+        margin:0;
+        padding:0;
+        overflow:hidden;
+        z-index:999999;
+      }
+    </style>
+  </head>
+  <body>
+    <iframe src="https://github.com/go-maxus-go/cv/raw/master/pdf/maxim_sheshukov_cv.pdf"></iframe>
+  </body>
 </html>
